editing html page

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RAHISI</title>
     <link rel="stylesheet" href="./asset/css/index.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="left-nav">
+    <!--here is a nav-bar that has an about page,contact page ,signup,login,update,download.-->
+    <nav class="nav__bar">
+        <div class="left__nav">
            <h1>RAHISI<em>SCANNER.</em></h1>
+           <img class="logo" alt="logo" src="https://image.shutterstock.com/z/stock-vector-rhs-letter-monogram-logo-design-vector-1894335976.jpg">
+           <!--here i placed the right side of the web,which contains -->
         </div>
-        <div class="right-nav">
-            <ul class="nav-links">
+        <div class="right__nav">
+            <ul >
                 <li>
                     <a href="#sign-up">sign-up</a>
                 </li>
@@ -21,16 +24,13 @@
                     <a href="#log-in">log-in</a>
                 </li>
                 <li>
-                    <a href="#about">about</a>
+                    <a href="#About">about</a>
+                </li>
+                <li>
+                    <a href="#">certificates</a>
                 </li>
                 <li>
                     <a href="#">contact</a>
-                </li>
-                <li>
-                    <a href="#">upload-cert</a>
-                </li>
-                <li>
-                    <a href="#">Download-cert</a>
                 </li>
             </ul>
         </div>
@@ -57,16 +57,14 @@
                 <p>Rahisi scanner is here for you, This is a website that allows you to download your certificate at the confort of your home.</p>
         </span>
     </section>
-    <section id="upload-cert">
-        <h1>Log-in</h1>
-        <div class="log-content">
+    <section id="certificates">
+        <h1>My People get your certificates here</h1>
         </section>
-        <section id="Download-cert">
-            <h1>Download your cerificate here</h1>
-            </section>
-            <section id="upload-cert">
-                <h1>only admins can upload certificates.</h1>
-                </section>
+                <footer>
+                    <section id="contact">
+                        <h1>You can contact us here!</h1> 
+                        </section>
+                </footer>
     
     <script src="./asset/js/index.js"></script>
 </body>
