creating sign up page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="nav__bar">
         <div class="left__nav">
            <h1>RAHISI<em>SCANNER.</em></h1>
-           <img class="logo" alt="logo" src="https://image.shutterstock.com/z/stock-vector-rhs-letter-monogram-logo-design-vector-1894335976.jpg">
+           <img class="logo" alt="logo" src="./asset/images/Screenshot from 2022-06-22 10-05-34.png">
            <!--here i placed the right side of the web,which contains -->
         </div>
         <div class="right__nav">
@@ -36,14 +36,30 @@
         </div>
     </nav>
     <section id="sign-up">
-        <div class="landingpage_left">
-            <h1>Sign-up</h1>
+        <form class="signup-form">
+            <h1>Create Account</h1>
+            <p>or use your email for registration</p>
+            <div class="input-group">
+              <i class="user"></i>
+              <input type="text" placeholder="Name" />
+            </div>
+            <div class="input-group">
+              <i class="fas fa-envelope"></i>
+              <input type="email" placeholder="Email" />
+            </div>
+            <div class="input-group">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Password" />
+            </div>
+            <button type="button">Sign Up</button>
+          </form>
 
     </section>
     <!-- skills section -->
     <section id="log-in">
-        <h1>Log-in</h1>
-        <div class="log-content">
+        <h1>Login </h1>
+        <form id="login"  action=""></form>
+        
     </section>
     <section id="about">
         <h1>ABOUT US</h1>
@@ -62,7 +78,12 @@
         </section>
                 <footer>
                     <section id="contact">
-                        <h1>You can contact us here!</h1> 
+                        <h1>You can contact us here!</h1>
+                        <div class="social-media">
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-linkedin-in"></i>
+                          </div> 
                         </section>
                 </footer>
     
